--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "EShOPCS": "Server=KAMILKAPLAN;Database=EShop;User Id=sa;Password=1;"
+  "EShOPCS": "Server=DESKTOP-QG5R430;Database=EShop;User Id=sa;Password=1;"
 }
